# cetacea

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  tui.rs  utils.rs
src/docker/: connection.rs  mod.rs  models.rs
src/tests/: app_tests.rs  docker_client_tests.rs  docker_models_tests.rs  mod.rs  utils_tests.rs
