[package]
name = "cetacea"
version = "0.1.1"
edition = "2024"
description = "A terminal-based Docker container monitoring tool with a beautiful TUI interface"
authors = ["Balazs Horvath"]
license = "MIT"
repository = "https://github.com/rakki194/cetacea"
keywords = ["docker", "containers", "tui", "monitoring", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full", "http1", "client"] }
hyper-util = { version = "0.1.10", features = ["full", "client", "client-legacy", "tokio"] }
hyperlocal = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
async-trait = "0.1.86"
bytes = "1.10.0"
http-body-util = "0.1.2"
colored = "3.0.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
unicode-width = "0.2.0"
